--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio",
+  "homepage": "https://ret7020.github.io/PortfolioWeb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   }
